# fast-containers

./: .gitignore  CMakeLists.txt  README.md
allocators/: huge_page_allocator.h  stack_allocator.h
benchmarks/: CMakeLists.txt  map_benchmark.cpp
containers/: d_heap.h  id_container.h  id_object_pool.h  inplace_any.h
containers/tmp/: d_heap.h
example/: CMakeLists.txt  allocators_example.cpp  any_example.cpp  d_heap_example.cpp  id_container_example.cpp  id_object_pool_example.cpp
utils/: common.h  utils.h
